syntax = "proto3";

package todoPackage;

service Todo{
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc readTodo(voidNoParam) returns (TodoItems);
}


message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}

message voidNoParam {}